syntax = "proto3";
option go_package = "internal/relay/pb";

package relay;

message Empty {}

message SendLogSummary {
  int64 message_count = 1;
  int32 elapsed_time = 2;
}

message LogEntry {
  string server = 1;
  string message = 2;
}

service Agent {
  rpc SendLog(stream LogEntry) returns (SendLogSummary) {}
}